fixed fonts and z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@
 }
 
 .header_link {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-size: 18px;
   line-height: 120%;
@@ -42,7 +42,7 @@
 }
 
 .address {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-style: normal;
   font-size: 18px;
@@ -62,12 +62,12 @@
   background-size: 125% 100%;
   background-position: -140px;
   position: relative;
-  z-index: -99;
+  z-index: 0;
 }
 
 .cover__title {
   padding: 165px 50px 0;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: bold;
   font-size: 100px;
   line-height: 115%;
@@ -106,7 +106,7 @@
 }
 
 .cover__description-text {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-size: 22px;
   line-height: 1.3;
@@ -121,7 +121,7 @@
 
 .bet-button {
   background-color: transparent;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-size: 22px;
   line-height: 1.2;
@@ -144,7 +144,7 @@
 }
 
 .lots__heading {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: bold;
   font-size: 40px;
   line-height: 118%;
@@ -180,29 +180,25 @@
   justify-content: space-between;
   padding: 51px 40px 48px;
   position: relative;
-  z-index: -99;
+  z-index: 0;
+  background-size: 160% 100%;
+  background-position: -100px;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-size: 164% 100%;
-  background-position: -108px;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-size: 160% 100%;
-  background-position: -100px;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-size: 160% 100%;
-  background-position: -100px;
 }
 
 .card__title {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-size: 22px;
   line-height: 120%;
@@ -212,7 +208,7 @@
 }
 
 .card__text {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-size: 20px;
   line-height: 120%;
@@ -220,7 +216,7 @@
 }
 
 .lots__look-more-link {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-size: 20px;
   line-height: 110%;
@@ -259,7 +255,7 @@
 }
 
 .about__title {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: bold;
   font-size: 40px;
   line-height: 130%;
@@ -270,7 +266,7 @@
 }
 
 .about__text {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-size: 20px;
   line-height: 1.2;
@@ -304,7 +300,7 @@
 }
 
 .footer__menu-link {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: normal;
   font-size: 18px;
   text-underline-offset: 3px;
